--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@ gg<!DOCTYPE html>
     <link rel="stylesheet" href="index.css">
 </head>
 <body>
+    <h1><img src="img/logo.png" alt=""></h1>
     <div class="menu" id="two"><a href="results/results.html"> Resultados</a></div>
     <div class="menu"><a href="ranking/ranking.html">Ranking</a></div>
 
