--- a/results/results.html
+++ b/results/results.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="results.css">
 </head>
 <body>
+    <h1><a href="../index.html"><img src="../img/logom.png" alt=""></a></h1>
     <h2>Resultados</h2>
     <table>
         <thead>
@@ -19,104 +20,104 @@
         <tbody>
             <tr>
             <td class="edition">1ª edição</td>
-            <td class="p1"><img src="../img/gunner.png" alt="">Gunner</td>
-            <td class="p2"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p3"><img src="../img/nekomori.png" alt="">Nekomori</td>
+            <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
+            <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
             <td class="edition">2ª edição</td>
-            <td class="p1"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p2"><img src="../img/nekomori.png" alt=""> Nekomori</td>
-            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
+            <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p2"><img src="../img/Nekomori.png" alt=""> Nekomori</td>
+            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
             </tr><tr>
             <td class="edition">3ª edição</td>
-            <td class="p1"><img src="../img/nekomori.png" alt="">Nekomori</td>
-            <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
-            <td class="p3"><img src="../img/gunner.png" alt="">Gunner</td>
+            <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
+            <td class="p2"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
             </tr><tr>
             <td class="edition">4ª edição</td>
-            <td class="p1"><img src="../img/nekomori.png" alt="">Nekomori</td>
-            <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
-            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
+            <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
+            <td class="p2"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
             </tr><tr>
             <td class="edition">5ª edição</td>
-            <td class="p1"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p2"><img src="../img/gunner.png" alt="">Gunner</td>
-            <td class="p3"><img src="../img/nekomori.png" alt="">Nekomori</td>
+            <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
+            <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
             <td class="edition">6ª edição</td>
-            <td class="p1"><img src="../img/gunner.png" alt="">Gunner</td>
-            <td class="p2"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
+            <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
+            <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
             </tr><tr>
             <td class="edition">7ª edição</td>
-            <td class="p1"><img src="../img/nekomori.png" alt="">Nekomori</td>
-            <td class="p2"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p3"><img src="../img/gunner.png" alt="">Gunner</td>
+            <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
+            <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
             </tr><tr>
             <td class="edition">8ª edição</td>
-            <td class="p1"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p2"><img src="../img/gunner.png" alt="">Gunner</td>
-            <td class="p3"><img src="../img/nekomori.png" alt="">Nekomori</td>
+            <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
+            <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
             <td class="edition">9ª edição</td>
-            <td class="p1"><img src="../img/gunner.png" alt="">Gunner</td>
-            <td class="p2"><img src="../img/nekomori.png" alt="">Nekomori</td>
-            <td class="p3"><img src="../img/sliink.png" alt="">Sliink</td>
+            <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
+            <td class="p2"><img src="../img/Nekomori.png" alt="">Nekomori</td>
+            <td class="p3"><img src="../img/Sliink.png" alt="">Sliink</td>
             </tr><tr>
             <td class="edition">10ª edição</td>
-            <td class="p1"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p2"><img src="../img/nekomori.png" alt="">Nekomori</td>
-            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
+            <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p2"><img src="../img/Nekomori.png" alt="">Nekomori</td>
+            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
             </tbody><tr>
             <td class="edition">11ª edição</td>
-            <td class="p1"><img src="../img/gunner.png" alt="">Gunner</td>
-            <td class="p2"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p3"><img src="../img/nekomori.png" alt="">Nekomori</td>
+            <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
+            <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
             <td class="edition">12ª edição</td>
-            <td class="p1"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p2"><img src="../img/gunner.png" alt="">Gunner</td>
-            <td class="p3"><img src="../img/nekomori.png" alt="">Nekomori</td>
+            <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
+            <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
             <td class="edition">13ª edição</td>
-            <td class="p1"><img src="../img/nekomori.png" alt="">Nekomori</td>
-            <td class="p2"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p3"><img src="../img/gunner.png" alt="">Gunner</td>
+            <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
+            <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
             </tr><tr>
             <td class="edition">14ª edição</td>
-            <td class="p1"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p2"><img src="../img/gunner.png" alt="">Gunner</td>
-            <td class="p3"><img src="../img/nekomori.png" alt="">Nekomori</td>
+            <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
+            <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
             <td class="edition">15ª edição</td>
-            <td class="p1"><img src="../img/gunner.png" alt="">Gunner</td>
-            <td class="p2"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
+            <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
+            <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
             </tr><tr>
             <td class="edition">16ª edição</td>
-            <td class="p1"><img src="../img/nekomori.png" alt="">Nekomori</td>
-            <td class="p2"><img src="../img/gunner.png" alt="">Gunner</td>
-            <td class="p3"><img src="../img/sliink.png" alt="">Sliink</td>
+            <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
+            <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
+            <td class="p3"><img src="../img/Sliink.png" alt="">Sliink</td>
             </tr><tr>
             <td class="edition">17ª edição</td>
-            <td class="p1"><img src="../img/gunner.png" alt="">Gunner</td>
-            <td class="p2"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p3"><img src="../img/nekomori.png" alt="">Nekomori</td>
+            <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
+            <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
             <td class="edition">18ª edição</td>
-            <td class="p1"><img src="../img/bot.png" alt="">Bot</td>
-            <td class="p2"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
+            <td class="p1"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
             </tr><tr>
             <td class="edition">19ª edição</td>
-            <td class="p1"><img src="../img/sliink.png" alt="">Sliink</td>
-            <td class="p2"><img src="../img/gunner.png" alt="">Gunner</td>
-            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
+            <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
+            <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
+            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
             </tr><tr>
             <td class="edition">20ª edição</td>
-            <td class="p1"><img src="../img/gunner.png" alt="">Gunner</td>
-            <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
-            <td class="p3"><img src="../img/nekomori.png" alt="">Nekomori</td>
+            <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
+            <td class="p2"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr>
             <tr>
             <td class="edition">21ª edição</td>
