--- a/ranking/ranking.html
+++ b/ranking/ranking.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="ranking.css">
 </head>
 <body>
+    <h1><a href="../index.html"><img src="../img/logom.png" alt=""></a></h1>
     <h2>Ranking</h2>
     <table>
         <thead>
@@ -19,17 +20,17 @@
         <tbody>
             <tr>
             <td>1°</td>
-            <td><img src="../img/nekomori.png" alt="">Nekomori</td>
+            <td><img src="../img/Nekomori.png" alt="">Nekomori</td>
             <td class="tp"><span>🏆12 </span><span>🥈4</span><span>🥉10</span><span><img src="../img/podium.png" alt="">26</span></td>
             </tr>
             <tr>
             <td>2°</td>
-            <td><img src="../img/sliink.png" alt="">Sliink</td>
+            <td><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="tp"><span>🏆10</span><span>🥈12</span><span>🥉5</span><span><img src="../img/podium.png" alt="">27</span></td>
             </tr>
             <tr>
             <td>3°</td>
-            <td><img src="../img/gunner.png" alt="">Gunner</td>
+            <td><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="tp"><span>🏆8</span><span>🥈10</span><span>🥉9</span><span><img src="../img/podium.png" alt="">27</span></td>
             </tr>
             </tbody>
