--- a/results/results.html
+++ b/results/results.html
@@ -27,17 +27,17 @@
             <td class="edition">2ª edição</td>
             <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p2"><img src="../img/Nekomori.png" alt=""> Nekomori</td>
-            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tr><tr>
             <td class="edition">3ª edição</td>
             <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
-            <td class="p2"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
             <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
             </tr><tr>
             <td class="edition">4ª edição</td>
             <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
-            <td class="p2"><img src="../img/Bot.png" alt="">Bot</td>
-            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
+            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tr><tr>
             <td class="edition">5ª edição</td>
             <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
@@ -47,7 +47,7 @@
             <td class="edition">6ª edição</td>
             <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
-            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tr><tr>
             <td class="edition">7ª edição</td>
             <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
@@ -67,7 +67,7 @@
             <td class="edition">10ª edição</td>
             <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p2"><img src="../img/Nekomori.png" alt="">Nekomori</td>
-            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tbody><tr>
             <td class="edition">11ª edição</td>
             <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
@@ -92,7 +92,7 @@
             <td class="edition">15ª edição</td>
             <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
-            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tr><tr>
             <td class="edition">16ª edição</td>
             <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
@@ -105,18 +105,18 @@
             <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
             <td class="edition">18ª edição</td>
-            <td class="p1"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p1"><img src="../img/bot.png" alt="">Bot</td>
             <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
-            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tr><tr>
             <td class="edition">19ª edição</td>
             <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
-            <td class="p3"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tr><tr>
             <td class="edition">20ª edição</td>
             <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
-            <td class="p2"><img src="../img/Bot.png" alt="">Bot</td>
+            <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
             <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr>
             <tr>
@@ -163,12 +163,12 @@
                 </tr><tr>
                 <td class="edition">29ª edição</td>
                 <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
-                <td class="p2"><img src="../img/Bot.png" alt="">Bot</td>
+                <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
                 <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
                 </tr><tr>
                 <td class="edition">30ª edição</td>
                 <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
-                <td class="p2"><img src="../img/Bot.png" alt="">Bot</td>
+                <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
                 <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
                 </tr><tr>
                 <td class="edition">31ª edição</td>
