--- a/ranking/ranking.html
+++ b/ranking/ranking.html
@@ -21,7 +21,7 @@
             <tr>
             <td>1°</td>
             <td><img src="../img/Nekomori.png" alt="">Nekomori</td>
-            <td class="tp"><span>🏆12 </span><span>🥈4</span><span>🥉10</span><span><img src="../img/podium.png" alt="">26</span></td>
+            <td class="tp"><span>🏆12 </span><span>🥈3</span><span>🥉11</span><span><img src="../img/podium.png" alt="">26</span></td>
             </tr>
             <tr>
             <td>2°</td>
@@ -31,7 +31,12 @@
             <tr>
             <td>3°</td>
             <td><img src="../img/Gunner.png" alt="">Gunner</td>
-            <td class="tp"><span>🏆8</span><span>🥈10</span><span>🥉9</span><span><img src="../img/podium.png" alt="">27</span></td>
+            <td class="tp"><span>🏆8</span><span>🥈11</span><span>🥉8</span><span><img src="../img/podium.png" alt="">27</span></td>
+            </tr>
+            <tr>
+            <td>4°</td>
+            <td><img src="../img/bot.png" alt="">Bot</td>
+            <td class="tp"><span>🏆1</span><span>🥈5</span><span>🥉7</span><span><img src="../img/podium.png" alt="">27</span></td>
             </tr>
             </tbody>
     </table>
