--- a/results/results.html
+++ b/results/results.html
@@ -14,164 +14,164 @@
         <thead>
             <th>Edição</th>
             <th>🏆 Campeão</th>
-            <th>🥈 Vice</th>
+            <th>🥈 Vice-campeão</th>
             <th>🥉 Terceiro</th>
         </thead>
         <tbody>
             <tr>
-            <td class="edition">1ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/960263491053293588/unknown.png?width=1189&height=669" target="_blank">1ª edição</a></td>
             <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
-            <td class="edition">2ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/960290894634950727/unknown.png?width=1189&height=669" target="_blank">2ª edição</a></td>
             <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p2"><img src="../img/Nekomori.png" alt=""> Nekomori</td>
             <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tr><tr>
-            <td class="edition">3ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/960298352388485120/unknown.png?width=1189&height=669" target="_blank">3ª edição</a></td>
             <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
             <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
             </tr><tr>
-            <td class="edition">4ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/960303268368633946/unknown.png?width=1157&height=669" target="_blank">4ª edição</a></td>
             <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
             <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tr><tr>
-            <td class="edition">5ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/960712081571737610/unknown.png?width=1189&height=669">5ª edição</a></td>
             <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
-            <td class="edition">6ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/960722578710880316/unknown.png?width=1189&height=669" target="_blank">6ª edição</a></td>
             <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tr><tr>
-            <td class="edition">7ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/961430076111601684/unknown.png?width=1189&height=669" target="_blank">7ª edição</a></td>
             <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
             </tr><tr>
-            <td class="edition">8ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/961436556781039706/unknown.png?width=1189&height=669" target="_blank">8ª edição</a></td>
             <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
-            <td class="edition">9ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/961787301850152960/unknown.png?width=1189&height=669" target="_blank">9ª edição</a></td>
             <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p2"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             <td class="p3"><img src="../img/Sliink.png" alt="">Sliink</td>
             </tr><tr>
-            <td class="edition">10ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/961794258040410122/unknown.png?width=1189&height=669" target="_blank">10ª edição</a></td>
             <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p2"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tbody><tr>
-            <td class="edition">11ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/962186431239966720/unknown.png?width=1189&height=669" target="_blank">11ª edição</a></td>
             <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
-            <td class="edition">12ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/962792695057760316/unknown.png?width=1189&height=669" target="_blank">12ª edição</a></td>
             <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
-            <td class="edition">13ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/962801151147905104/unknown.png?width=1189&height=669">13ª edição</a></td>
             <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
             </tr><tr>
-            <td class="edition">14ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/964678823541080114/unknown.png?width=1189&height=669" target="_blank">14ª edição</a></td>
             <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
-            <td class="edition">15ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/964694639477129256/unknown.png?width=1189&height=669" target="_blank">15ª edição</a></td>
             <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tr><tr>
-            <td class="edition">16ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/1000526633964408862/unknown.png?width=1189&height=669" target="_blank">16ª edição</a></td>
             <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p3"><img src="../img/Sliink.png" alt="">Sliink</td>
             </tr><tr>
-            <td class="edition">17ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/1000533308918206464/unknown.png?width=1189&height=669" target="_blank">17ª edição</a></td>
             <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
-            <td class="edition">18ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/1000573734937182298/unknown.png?width=1189&height=669" target="_blank">18ª edição</a></td>
             <td class="p1"><img src="../img/bot.png" alt="">Bot</td>
             <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tr><tr>
-            <td class="edition">19ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/1000581032560570439/unknown.png?width=1189&height=669" target="_blank">19ª edição</a></td>
             <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tr><tr>
-            <td class="edition">20ª edição</td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/1000923716856856606/unknown.png?width=1189&height=669" target="_blank">20ª edição</a></td>
             <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
             <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr>
-            <tr>
-            <td class="edition">21ª edição</td>
-            <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
-            <td class="p2"><img src="../img/Nekomori.png" alt="">Nekomori</td>
-            <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
-            </tr>
-            <tr>
-                <td class="edition">22ª edição</td>
+                <tr>
+                <td class="edition"><a href="https://media.discordapp.net/attachments/1003029146567450644/1071572820632543272/image.png" target="_blank">21ª edição</a></td>
+                <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
+                <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
+                <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
+                </tr>
+                <tr>
+                <td class="edition"><a href="https://media.discordapp.net/attachments/1003386945780580423/1071573074840911943/image.png" target="_blank">22ª edição</a></td>
                 <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
                 <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
                 <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
                 </tr><tr>
-                <td class="edition">23ª edição</td>
+                <td class="edition"><a href="https://media.discordapp.net/attachments/1003386945780580423/1071573476214837258/image.png" target="_blank">23ª edição</a></td>
                 <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
                 <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
                 <td class="p3"><img src="../img/Sliink.png" alt="">Sliink</td>
                 </tr><tr>
-                <td class="edition">24ª edição</td>
+                <td class="edition"><a href="https://media.discordapp.net/attachments/1007080878922543105/1071573804440096819/image.png" target="_blank">24ª edição</a></td>
                 <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
                 <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
                 <td class="p3"><img src="../img/Sliink.png" alt="">Sliink</td>
                 </tr><tr>
-                <td class="edition">25ª edição</td>
+                <td class="edition"><a href="https://media.discordapp.net/attachments/1008075422002597908/1071574066080776282/image.png" target="_blank">25ª edição</a></td>
                 <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
                 <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
                 <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
                 </tr><tr>
-                <td class="edition">26ª edição</td>
+                <td class="edition"><a href="https://media.discordapp.net/attachments/1009589258790641755/1071574327562096740/image.png" target="_blank">26ª edição</a></td>
                 <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
                 <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
                 <td class="p3"><img src="../img/Sliink.png" alt="">Sliink</td>
                 </tr><tr>
-                <td class="edition">27ª edição</td>
+                <td class="edition"><a href="https://media.discordapp.net/attachments/1009599360612434060/1071574717573636106/image.png" target="_blank">27ª edição</a></td>
                 <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
                 <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
                 <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
                 </tr><tr>
-                <td class="edition">28ª edição</td>
+                <td class="edition"><a href="https://media.discordapp.net/attachments/1010710379292278906/1071575020066852875/image.png" target="_blank">28ª edição</a></td>
                 <td class="p1"><img src="../img/Gunner.png" alt="">Gunner</td>
                 <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
                 <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
                 </tr><tr>
-                <td class="edition">29ª edição</td>
+                <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/1011803444643889213/unknown.png?width=1189&height=669" target="_blank">29ª edição</a></td>
                 <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
                 <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
                 <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
                 </tr><tr>
-                <td class="edition">30ª edição</td>
+                <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/1016088965419384942/unknown.png?width=1189&height=669" target="_blank">30ª edição</a></td>
                 <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
                 <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
                 <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
                 </tr><tr>
-                <td class="edition">31ª edição</td>
+                <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/1070493705993195661/image.png?width=1189&height=669" target="_blank">31ª edição</a></td>
                 <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
                 <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
                 <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
