--- a/results/results.html
+++ b/results/results.html
@@ -24,7 +24,7 @@
             <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
-            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/960290894634950727/unknown.png?width=1189&height=669" target="_blank">2ª edição</a></td>
+            <td class="edition"><a href="https://cdn.discordapp.com/attachments/960263390222229545/960290894634950727/unknown.png" target="_blank">2ª edição</a></td>
             <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p2"><img src="../img/Nekomori.png" alt=""> Nekomori</td>
             <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
