--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ gg<!DOCTYPE html>
     <h1><img src="img/logo.png" alt=""></h1>
     <div class="menu" id="two"><a href="results/results.html"> Resultados</a></div>
     <div class="menu"><a href="ranking/ranking.html">Ranking</a></div>
+    <div class="menu"><a href="pontuacao/pontuacao.html">Pontuação</a></div>
 
 </body>
 </html>
