--- a/ranking/ranking.html
+++ b/ranking/ranking.html
@@ -12,10 +12,11 @@
     <h2>Ranking</h2>
     <table>
         <thead>
-            <!--<th>Posição</th>
-            <th>🏆 Títulos</th>
-            <th>🥈 Vice</th>
-            <th>🥉 Terceiro</th> -->
+            <tr>
+            <th>Pos</th>
+            <th>Nome</th>
+            <th>Títulos</th>
+            </tr>
         </thead>
         <tbody>
             <tr>
