--- a/results/results.html
+++ b/results/results.html
@@ -39,7 +39,7 @@
             <td class="p2"><img src="../img/bot.png" alt="">Bot</td>
             <td class="p3"><img src="../img/bot.png" alt="">Bot</td>
             </tr><tr>
-            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/960712081571737610/unknown.png?width=1189&height=669">5ª edição</a></td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/960712081571737610/unknown.png?width=1189&height=669" target="_blank">5ª edição</a></td>
             <td class="p1"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
@@ -79,7 +79,7 @@
             <td class="p2"><img src="../img/Gunner.png" alt="">Gunner</td>
             <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             </tr><tr>
-            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/962801151147905104/unknown.png?width=1189&height=669">13ª edição</a></td>
+            <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/962801151147905104/unknown.png?width=1189&height=669" target="_blank">13ª edição</a></td>
             <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori</td>
             <td class="p2"><img src="../img/Sliink.png" alt="">Sliink</td>
             <td class="p3"><img src="../img/Gunner.png" alt="">Gunner</td>
