--- a/ranking/ranking.html
+++ b/ranking/ranking.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1><a href="../index.html"><img src="../img/logom.png" alt=""></a></h1>
-    <h2>Ranking</h2>
+    <h2>Ranking de Pilotos</h2>
     <table>
         <thead>
             <tr>
@@ -41,11 +41,58 @@
             </tr>
             </tbody>
     </table>
-    <div id="voltar">
-        <p><a href="../index.html">Voltar</a></p>
-    </div>
 
-    
+    <h2>Ranking de Construtores</h2>
+    <table id="construtor">
+        <thead>
+            <tr>
+                <th class="const">Posição</th>
+                <th>Construtor</th>
+                <th class="const">Títulos</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td class="const">1°</td>
+                <td><span class="Caterham">Caterham</span></td>
+                <td class="const">13</td>
+            </tr>
+            <tr>
+                <td class="const">2°</td>
+                <td><span class="McLaren">McLaren</span></td>
+                <td class="const">7</td>
+            </tr>
+            <tr>
+                <td class="const">3°</td>
+                <td><span class="Ferrari">Ferrari</span></td>
+                <td class="const">6</td>
+            </tr>
+            <tr>
+                <td class="const">4°</td>
+                <td><span class="Lotus">Lotus</span></td>
+                <td class="const">2</td>
+            </tr>
+            <tr>
+                <td class="const">5°</td>
+                <td><span class="ToroRosso">Toro Rosso</span></td>
+                <td class="const">1</td>
+            </tr>
+            <tr>
+                <td class="const">6°</td>
+                <td><span class="Williams">Williams</span></td>
+                <td class="const">1</td>
+            </tr>
+            <tr>
+                <td class="const">7°</td>
+                <td><span class="Satsu">Satsu</span></td>
+                <td class="const">1</td>
+            </tr>
+        </tbody>
+    </table>
+
+        <div id="voltar">
+            <p><a href="../index.html">Voltar</a></p>
+        </div>
     
 </body>
 </html>
